# swarm-nxt

./: .gitignore  .gitmodules  .readthedocs.yaml  404.html  index.html  mkdocs.yml  readme.md  requirements.txt  search.html  test_rtd_config.sh  test_service_shutdown.sh  versions.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check_docs.yaml  check_ros.yaml  docker-build.yml  test_runner.yml
ansible/: .drones_update.yml.swm  .gitignore  drone_postflight.yml  drone_setup.yml  drones.yml  drones_command.yml  drones_fw_update.yml  drones_postflight.yml  drones_preflight.yml  drones_setup.yml  drones_shutdown.yml  drones_update.yml  flight_controller.yml  get_kernel.sh  host_computer.yml  install-ansible.sh  inventory.ini  patched-kernel.tar.gz.sha256  run_simulator.yml  sourceme.bash  ts_inventory.ini
appendix/: index.html
bounds_checker_ros2/: CMakeLists.txt  package.xml
bounds_checker_ros2/include/bounds_checker_ros2/: bounds_checker.h
bounds_checker_ros2/src/: bounds_checker.cpp
bounds_checker_ros2/tests/: planes_test.cpp
data_analysis/: sync_mcap_ulog.py
devel/: 404.html  index.html  search.html
docker/: Dockerfile  Dockerfile.drone  docker-compose.yml  generate_swarm_inventory.sh  host-docker-compose.yml  launch_swarm_zellij.sh
docs/: appendix.md  drone-setup.md  flying.md  hardware-setup.md  image-creation.md  index.md  infra-setup.md  it-infra-setup.md  manual-setup.md  nxt-setup.md  position-estimate-setup.md  readthedocs-setup.md  remote-control-setup.md  software-common-tasks.md  software-setup.md  systemd_shutdown_fix.md
drone-setup/: index.html
esc-adapter/: .gitignore  esc-adapter-caps.kicad_pcb  esc-adapter-caps.kicad_pro  esc-adapter-caps.kicad_sch  esc-adapter.kicad_pcb  esc-adapter.kicad_pro  esc-adapter.kicad_sch  esc-adapter.step
examples/: mavsdk_imu.py
flying/: index.html
infra-setup/: index.html
js/: copy-button.js
latest/: 404.html  index.html  search.html
manual-setup/: index.html
optitrack/: .gitignore  bounds_file_maker.py  create_bounds.py  get_bounds.ipynb  get_bounds.py  get_bounds2.py  requirements.txt  send_goals.py  send_points_to_devices.py
remote-control-setup/: index.html
ros_packages/: format.sh
ros_packages/bounds_checker_ros2/: CMakeLists.txt  package.xml
ros_packages/bounds_checker_ros2/include/bounds_checker_ros2/: bounds_checker.h
ros_packages/bounds_checker_ros2/launch/: bounds_checker.launch.py
ros_packages/bounds_checker_ros2/msg/: Plane.msg
ros_packages/bounds_checker_ros2/src/: bounds_checker.cpp  bounds_checker_node.cpp
ros_packages/drone_gui_ros2/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
ros_packages/drone_gui_ros2/drone_gui_ros2/: __init__.py  drone_gui_node.py
ros_packages/drone_gui_ros2/launch/: drone_gui.launch.py
ros_packages/drone_gui_ros2/scripts/: drone_gui_node.py
ros_packages/drone_gui_ros2/web/: index.html  script.js  style.css
ros_packages/drone_planner_ros2/: CMakeLists.txt  package.xml
ros_packages/drone_planner_ros2/include/drone_planner_ros2/: drone_planner.h
ros_packages/drone_planner_ros2/launch/: drone_planner.launch.py
ros_packages/drone_planner_ros2/src/: drone_planner.cpp  drone_planner_node.cpp
ros_packages/drone_planner_ros2/tests/: planes_test.cpp
ros_packages/drone_planner_ros2/tests/test_plane_files/: valid_cube_111m.json
ros_packages/drone_state_manager_ros2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_packages/drone_state_manager_ros2/config/: drone_state_manager_params.yaml
ros_packages/drone_state_manager_ros2/drone_state_manager_ros2/: main.py
ros_packages/drone_state_manager_ros2/scripts/: drone_state_manager.py
ros_packages/goal_giver_ros2/: CMakeLists.txt  package.xml
ros_packages/goal_giver_ros2/scripts/: goal_giver.py
ros_packages/latency_checker_ros2/: CMakeLists.txt  package.xml
ros_packages/latency_checker_ros2/include/latency_checker_ros2/: latency_checker.h
ros_packages/latency_checker_ros2/msg/: Heartbeat.msg  NameLatency.msg
ros_packages/latency_checker_ros2/src/: latency_checker.cpp  latency_checker_node.cpp
ros_packages/logger_ros2/: CMakeLists.txt  README.md  package.xml
ros_packages/logger_ros2/launch/: logger.launch.py
ros_packages/logger_ros2/src/logger_ros2/: logger_node.py
ros_packages/omninxt_bridge_ros2/: CMakeLists.txt  package.xml
ros_packages/omninxt_bridge_ros2/config/: bridge_params.yaml  command_converter_params.yaml  trajectory_converter_params.yaml
ros_packages/omninxt_bridge_ros2/launch/: command_converter_launch.py  trajectory_converter_launch.py
ros_packages/omninxt_bridge_ros2/src/: command_converter_node.cpp  trajectory_converter_node.cpp
ros_packages/omninxt_controller_ros2/: CMakeLists.txt  package.xml
ros_packages/omninxt_controller_ros2/include/omninxt_controller_ros2/: omninxt_controller.h
ros_packages/omninxt_controller_ros2/launch/: omninxt_controller.launch.py
ros_packages/omninxt_controller_ros2/src/: omninxt_controller.cpp  omninxt_controller_node.cpp
ros_packages/safety_checker_ros2/: CMakeLists.txt  package.xml
ros_packages/safety_checker_ros2/config/: safety_params.yaml
ros_packages/safety_checker_ros2/include/safety_checker_ros2/: safety_checker.h
ros_packages/safety_checker_ros2/launch/: safety_checker.launch.py
ros_packages/safety_checker_ros2/src/: safety_checker.cpp  safety_checker_node.cpp
ros_packages/safety_checker_ros2/tests/: planes_test.cpp
ros_packages/safety_checker_ros2/tests/test_plane_files/: invalid1.json
ros_packages/swarmnxt_controller_ros2/: CMakeLists.txt  package.xml
ros_packages/swarmnxt_controller_ros2/include/swarmnxt_controller_ros2/: swarmnxt_controller.h
ros_packages/swarmnxt_controller_ros2/src/: swarmnxt_controller.cpp  swarmnxt_controller_node.cpp
ros_packages/swarmnxt_msgs/: CMakeLists.txt  README.md  package.xml
ros_packages/swarmnxt_msgs/msg/: ControllerCommand.msg  DroneState.msg  Plane.msg  Trigger.msg
ros_packages/swarmnxt_msgs/srv/: GetPlanes.srv
search/: search_index.json
software-common-tasks/: index.html
(+85 files in other folders)
