[metadata]
name = drone_state_manager_ros2
version = 0.0.1
description = A ROS2 package for managing drone states.
maintainers =
    Your Name <your.email@example.com>
license = MIT

[options]
packages = find:
install_requires =
    rclpy
    std_msgs
    swarmnxt_msgs

[options.packages.find]
where = drone_state_manager_ros2

[options.entry_points]
console_scripts =
    drone_state_manager = drone_state_manager_ros2.main:main