<package format="2">
  <name>goal_giver_ros2</name>
  <version>0.0.1</version>
  <description>A ROS2 package for sending goals to drones.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>multi_agent_planner_msgs</exec_depend>
  
  <test_depend>pytest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>