<package format="2">
  <name>logger_ros2</name>
  <version>0.1.0</version>
  <description>A ROS 2 package for logging topics using the ROS 2 bag Python library.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rosbag2_py</exec_depend>
  
  <test_depend>pytest</test_depend>
</package>