<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>omninxt_bridge_ros2</name>
  <version>0.1.0</version>
  <description>Bridge nodes for converting between planner and controller message types</description>
  <maintainer email="charbel.toumieh@epfl.ch"></maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>multi_agent_planner_msgs</depend>
  <depend>mpc_controller_ros2_msgs</depend>
  <depend>swarmnxt_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>mavros_msgs</depend>

  <exec_depend>mpc_controller_ros2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
