<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_checker_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="niel.mistry@epfl.ch">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nlohmann-json-dev</depend>
  <depend>px4_ros_com</depend>
  <depend>swarmnxt_controller_ros2</depend>
  <depend>swarmnxt_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
